# gourmet-web

./: README.md  database.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  feeds.jsonc  main.py  playbook.yml  pyproject.toml
.github/workflows/: ci-cd.yml
client/: Dockerfile  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
client/src/: validators.ts
client/src/app/: globals.css  layout.tsx  page.tsx  visualization.tsx
client/src/app/(content)/: ContentLayoutClient.tsx  layout.tsx
client/src/app/(content)/feed/: layout.tsx  page.tsx  util.ts
client/src/app/(content)/flavours/[flavourId]/: DeleteFlavourButton.tsx  FlavourSettings.tsx  layout.tsx  page.tsx
client/src/app/(content)/flavours/new-from/[contentId]/: page.tsx
client/src/app/(welcome)/: layout.tsx  page.tsx
client/src/app/(welcome)/onboarding/: page.tsx
client/src/app/actions/: newFlavourFromContentId.ts
client/src/app/api/meta/: route.ts
client/src/app/api/proxy/[...all]/: route.ts
client/src/app/api/visualization/: route.ts
client/src/app/feed/: FeedbackButtons.tsx  layout.tsx  loading.tsx  page.tsx
client/src/app/onboarding/: page.tsx
client/src/components/: Button.tsx  Feed.tsx  FeedbackButtons.tsx  Header.tsx  MoreLikeThisButton.tsx  Sidebar.tsx
client/src/util/: http.ts
docker/ollama/: run.sh
docker/postgres/: init.sql
docker/server/: crontab  entrypoint.sh
server/: Dockerfile  alembic.ini  crontab  entrypoint.sh  feeds.jsonc  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 102ee66fa5fa_add_constants_table.py  1a72e16b9aae_add_user_flavours_table.py  930463ae22db_add_content_ratings.py  989f2a9bcf75_inc_embed_dim_to_1024.py  ae600ec88b8b_add_source_id_to_ingestion_jobs_table.py  eea9494188d5_initial_migration.py
server/src/: auth.py  constants.py  database.py  ingest.py  pipeline.py  prune.py  server.py  service.py  util.py  validators.py  visualize.py
src/: auth.py  classes.py  constants.py  database.py  dataclasses.py  handler.py  pipeline.py  server.py  service.py  util.py  validators.py  visualize.py
