[project]
name = "gourmet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "psycopg[binary]>=3.2.5",
    "torch>=2.6.0",
]

[tool.ruff]
indent-width = 2
line-length = 120
select = ["E", "W", "F"]

[tool.ruff.lint]
extend-select = ["E", "W", "F"]
