[project]
name = "gourmet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databases[asyncpg]>=0.9.0",
    "feedparser>=6.0.11",
    "jsmin>=3.0.1",
    "numpy>=2.2.3",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
]

[tool.ruff]
indent-width = 2
line-length = 120
select = ["E", "W", "F"]

[tool.ruff.lint]
extend-select = ["E", "W", "F"]
