[project]
name = "gourmet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "clerk-backend-api>=1.8.0",
    "databases[asyncpg]>=0.9.0",
    "fastapi>=0.115.11",
    "feedparser>=6.0.11",
    "greenlet>=3.1.1",
    "jsmin>=3.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.68.2",
    "pgvector>=0.3.6",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "sentence-transformers>=3.4.1",
    "sentry-sdk[fastapi]>=2.23.1",
    "torch>=2.6.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
indent-width = 2
line-length = 120
select = ["E", "W", "F"]

[tool.ruff.lint]
extend-select = ["E", "W", "F"]
